# rpi_webradio

./: .gitignore  CMakeLists.txt  Makefile  README.md  addnetworkmusicdir.sh  cairo_framebuffer.pro  cairo_test.cpp  cairo_test.txt  cgbasics.cpp  cgbasics.h  cgeventqueue.h  cgfontprops.cpp  cgfontprops.h  cgframe.cpp  cgframe.h  cglabel.cpp  cglabel.h  cglistwidget.cpp  cglistwidget.h  cgmultiscreens.cpp  cgmultiscreens.h  cgprogressbar.cpp  cgprogressbar.h  cgscreen.cpp  cgscreen.h  cgtreewidget.cpp  cgtreewidget.h  cgwidget.cpp  cgwidget.h  cron_remount.sh  editwebradiostations.sh  framebuffer_cairo_tools.cpp  framebuffer_cairo_tools.h  install_pitft22.sh  install_programming_tools.sh  install_wavesharetft35a.sh  install_wavesharetft35a_new.sh  rpi_mpd.conf  rpi_tools.cpp  rpi_tools.h  (+2 more)
apps/: CMakeLists.txt
apps/webradio_gui/: CMakeLists.txt  main.cpp  wrmainscreen.h  wrmpddirectorytreeprovider.cpp  wrmpddirectorytreeprovider.h  wrmusicscreen.cpp  wrmusicscreen.h  wrradioscreen.cpp  wrradioscreen.h
cmake/: FindLibMPDClient.cmake  FindWiringPi.cmake  PrecompiledHeader.cmake  rpiwebradio_dumpallvariables.cmake
electronics/: Diode_DO-35_SOD27_Vertical_AnodeUp_RM2.54.FCStd  amplifier.net  amplifier.pro  amplifier.sch  resistor_7_5mm.FCStd  rpi_webradio_lib.dcm  rpi_webradio_lib.lib  stec12e08.lib  tinkerkit_i2c.lib  tinkerkit_sensorshield_single.lib  tinkerkit_serial.lib
electronics/amplifier/: amplifier.cmp  amplifier.kicad_pcb  amplifier.net  amplifier.pro  amplifier.sch  power_supply_24V.sch  rpi_webradio_lib.dcm  rpi_webradio_lib.lib
electronics/power_switch/: power_switch.cmp  power_switch.dcm  power_switch.kicad_pcb  power_switch.lib  power_switch.net  power_switch.pro  power_switch.sch
electronics/special_symbols.pretty/: Relay_DPDT_FRT5.kicad_mod  Relay_SPDT_HJR-4102.kicad_mod  Resistor_Ceramic_Horizontal_L25mm-W6.4mm-H6.4mm-p30mm.kicad_mod  Resistor_Horizontal_RM7.5mm.kicad_mod  Resistor_Horizontal_RM7mm.kicad_mod  Resistor_Vertical_RM2.5mm.kicad_mod  Resistor_Vertical_RM5mm.kicad_mod  TerminalBlock_RND-205-00023_RM10mm_2pol.kicad_mod  TerminalBlock_RND-205-00024_RM10mm_3pol.kicad_mod  TerminalBlock_RND-205-00025_RM10mm_4pol.kicad_mod  TerminalBlock_RND-205-00026_RM10mm_5pol.kicad_mod  TerminalBlock_RND-205-00027_RM10mm_6pol.kicad_mod  TerminalBlock_RND-205-00028_RM10mm_7pol.kicad_mod  TerminalBlock_RND-205-00029_RM10mm_8pol.kicad_mod  TerminalBlock_RND-205-00030_RM10mm_9pol.kicad_mod  TerminalBlock_RND-205-00031_RM10mm_10pol.kicad_mod  TerminalBlock_RND-205-00032_RM10mm_11pol.kicad_mod  TerminalBlock_RND-205-00033_RM10mm_12pol.kicad_mod  TerminalBlock_RND-205-00067_RM7.5mm_2pol.kicad_mod  TerminalBlock_RND-205-00068_RM7.5mm_3pol.kicad_mod  TerminalBlock_RND-205-00069_RM7.5mm_4pol.kicad_mod  TerminalBlock_RND-205-00070_RM7.5mm_5pol.kicad_mod  TerminalBlock_RND-205-00071_RM7.5mm_6pol.kicad_mod  TerminalBlock_RND-205-00072_RM7.5mm_7pol.kicad_mod  TerminalBlock_RND-205-00073_RM7.5mm_8pol.kicad_mod  TerminalBlock_RND-205-00074_RM7.5mm_9pol.kicad_mod  TerminalBlock_RND-205-00075_RM7.5mm_10pol.kicad_mod  TerminalBlock_RND-205-00076_RM7.5mm_11pol.kicad_mod  TerminalBlock_RND-205-00077_RM7.5mm_12pol.kicad_mod  TerminalBlock_RND-205-00243_RM10.16mm_2pol.kicad_mod  TerminalBlock_RND-205-00244_RM10.16mm_3pol.kicad_mod  TerminalBlock_RND-205-00245_RM10.16mm_4pol.kicad_mod  TerminalBlock_RND-205-00246_RM10.16mm_5pol.kicad_mod  TerminalBlock_RND-205-00247_RM10.16mm_6pol.kicad_mod  TerminalBlock_RND-205-00248_RM10.16mm_7pol.kicad_mod  TerminalBlock_RND-205-00249_RM10.16mm_8pol.kicad_mod  TerminalBlock_RND-205-00250_RM10.16mm_9pol.kicad_mod  TerminalBlock_RND-205-00251_RM10.16mm_10pol.kicad_mod  TerminalBlock_RND-205-00252_RM10.16mm_11pol.kicad_mod  TerminalBlock_RND-205-00253_RM10.16mm_12pol.kicad_mod  (+2 more)
housing/: box.FCStd1  box.FCStd2  box_back.FCStd1  box_front.FCStd1  box_inside.FCStd1  box_sides.FCStd1  box_topbottom.FCStd1  kitchenradio_buttons.cdr  sc5.FCStd  sc8n.FCStd1  speaker_terminal.FCStd  speaker_terminal.FCStd1
housing/box1/: box.FCStd  box_back.FCStd  box_front.FCStd  box_inside.FCStd  box_sides.FCStd  box_topbottom.FCStd  sc8n.FCStd
images/: logo1.cpt
lib/: Makefile  cgapplication.cpp  cgapplication.h  cgbasics.cpp  cgbasics.h  cgdirectorytreewidget.cpp  cgdirectorytreewidget.h  cgeventqueue.cpp  cgeventqueue.h  cgevents.cpp  cgevents.h  cgfontprops.cpp  cgfontprops.h  cgframe.cpp  cgframe.h  cgimage.cpp  cgimage.h  cglabel.cpp  cglabel.h  cglayout.cpp  cglayout.h  cglistwidget.cpp  cglistwidget.h  cgmultiscreens.cpp  cgmultiscreens.h  cgpalette.cpp  cgpalette.h  cgprecomp.h  cgprogressbar.cpp  cgprogressbar.h  cgscreen.cpp  cgscreen.h  cgscrollbar.cpp  cgscrollbar.h  cgsymbol.cpp  cgsymbol.h  cgtabbedmultiscreens.cpp  cgtabbedmultiscreens.h  cgtabmixin.cpp  cgtabmixin.h  (+16 more)
libs/: CMakeLists.txt
libs/rpiwebradio_gui/: CMakeLists.txt  cgapplication.cpp  cgdebug.cpp  cgdebug.h  cgeventqueue.h  cgfontprops.cpp  cgfontprops.h  cgframe.h  cgimage.cpp  cglabel.cpp  cglib.h  cglistwidget.h  cgprecomp.cpp  cgprecomp.h  cgprogressbar.cpp  cgscrollbar.cpp  cgsymbol.cpp  cgsymbol.h  cgtabmixin.cpp  cgtabmixin.h  cgtreewidget.h  cgtwostatimage.h  rpi_cgevents.h
libs/rpiwebradio_tools/: CMakeLists.txt  rpi_tools.cpp
mpdtools/: Makefile  mpd_tools.cpp  mpd_tools.h
rpitools/: Makefile  rpi_tools.cpp  rpi_tools.h
scripts/: default_webradio.m3u  editwebradiostations.sh  install_programming_tools.sh
test_mpd/: example1.cpp
test_mpdtools/: Makefile  main.cpp  test_mpdtools.cpp  test_mpdtools.pro
test_rpitools/: Makefile  test_rpitools.pro
test_widgets/: Makefile  cairo_framebuffer.pro  cairo_test.cpp  cairo_test.txt
tests/: CMakeLists.txt
tests/mpdtools_base/: CMakeLists.txt  test_mpdtools_base.cpp
tests/rpitools/: CMakeLists.txt  test_rpitools.cpp
tests/widgets/: CMakeLists.txt
webradio_gui/: Makefile  global.h  main.cpp  precomp.h  webradio_gui.pro  webradio_stations.ini  wrmainscreen.cpp  wrmainscreen.h  wrmpddirectorytreeprovider.cpp  wrmpddirectorytreeprovider.h  wrmusicscreen.cpp  wrmusicscreen.h  wrradioscreen.cpp  wrradioscreen.h
(+25 files in other folders)
